--- a/download/QRcode01.html
+++ b/download/QRcode01.html
@@ -110,7 +110,8 @@ działa w (dowolnej) przeglądarce w trybie off-line - nie wymaga dostępu do in
 Czytniki QR na ogół już są w aplikacji aparatu telefonu - wystarczy włączyć aparat i objąć widokiem obrazek kodu, a pojawia się np. przycisk "Pokaż dane". Jeszcze wygodniejsze jest korzystanie z aplikacji np. "Czytnik QR" firmy TeaCapps (od razu pokazuje się tekst, a dodatkowo mamy zapamiętaną historię tekstów). Można też skorzystać z kamery komputera/laptopa: <a href="./jsQR_Demo1cam.html">jsQR_Demo1cam.html</a> (<a href="./jsQR_Demo1cam.zip">...zip</a>) albo z QR-kodu w pliku graficznym, np. skanie: <a href="./jsQR_Demo1img.html">jsQR_Demo1img.html</a> (<a href="./jsQR_Demo1img.zip">...zip</a>).
 </small></p>
 <p>
-Ten generator pozwala uzyskać w formacie wyjściowym nie tylko obraz, ale także tabelę HTML z jasnym i ciemnym tłem komórek oraz czysty tekst składający się ze znaków blokowych (przy opcji mniej niż 5px/komórkę są to bloki o wysokości pół znaku).
+Ten generator pozwala uzyskać w formacie wyjściowym nie tylko obraz, ale także tabelę HTML z jasnym i ciemnym tłem komórek oraz czysty tekst składający się ze znaków blokowych (przy opcji mniej niż 5px/komórkę są to bloki o wysokości pół znaku). <small>Tryb tekstowy działa w kodowaniu UTF-8, UTF-16, ..., cp852, cp850, cp437, ..., ale nie działa dla kodowania cp125x (=ANSI) i ISO-8859-x.</small>
+
 </p>
 <p>
 Aby zakodować lokalizację geograficzną w QR-kodzie należy przed współrzędnymi dopisać "geo:" (uwaga - to musi być osobny obrazek QR-kodu), np.:
